--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,10 +7,11 @@
 
     position: sticky;
     top: 0;
+    z-index: 9999;
 }
 
 .navbar p {
-    font-size: clamp(1.4rem, 1.6vw, 2rem);
+    font-size: clamp(1rem, 1.6vw, 2rem);
     font-weight: 600;
     color: #272727;
     cursor: pointer;
